Add CMSClassUnloading by default